# CMake_Examples

./: README.md
custom_glfw_install_path/: CMakeLists.txt  README.md
custom_glfw_install_path/libglfw/: README.md
custom_opencv_install_path/: CMakeLists.txt  README.md  demo.cpp
custom_opencv_install_path/libcv/: README.md
multi_lib_with_same_header/: CMakeLists.txt  README.md
multi_lib_with_same_header/calc/: CMakeLists.txt  main.cpp
multi_lib_with_same_header/calc/common/: common.h
multi_lib_with_same_header/calc/multi/: multi.cpp  multi.h
multi_lib_with_same_header/math/: CMakeLists.txt  math.cpp  math.h
multi_lib_with_same_header/math/add/: add.cpp  add.h
multi_lib_with_same_header/math/common/: common.h
